# Codex-Usage-Monitor

./: .gitignore  LICENSE  README.md  build.ps1  pyproject.toml
docs/superpowers/plans/: 2026-07-15-codex-only.md
docs/superpowers/specs/: 2026-07-15-codex-only-design.md
src/usage_overlay/: config.py  formatting.py  i18n.py  main.py  models.py  native_ui.py  panel.py  refresh.py  reset_feed.py  runtime.py  windows.py
src/usage_overlay/providers/: __init__.py  codex.py
tests/: test_codex_provider.py  test_config.py  test_formatting.py  test_models.py  test_native_ui.py  test_package_layout.py  test_panel.py  test_refresh.py  test_reset_feed.py  test_runtime.py  test_windows.py
